# athlete-context

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: fetch_activity_details.py  generate_workout_context.py  test_garmin.py
